Make imports automatic and upload-first
